--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Cronometro</string>
+    <string name="app_name">Cronómetro</string>
     <string name="tv_time">0:00.00</string>
     <string name="btn_start">Iniciar</string>
 </resources>
